# nyat

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yaml
config/: base.yaml
migrations/: 01_create_users_table.sql  02_create_chat_tables.sql
src/: auth.rs  configuration.rs  error.rs  lib.rs  main.rs  routes.rs  startup.rs  telemetry.rs
src/routes/: chats.rs  user.rs
tests/api/: chats.rs  helpers.rs  login.rs  main.rs  messages.rs  register.rs
tests/api_v1/: helpers.rs  main.rs  register.rs
