[package]
name = "nyat"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
actix-web = "4"
anyhow = "1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-actix-web = "0.7"
thiserror = "2.0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.145"
argon2 = { version = "0.5.3", features = ["std", "rand"] }
config = { version = "0.15.18" }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["v4"] }
jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs"] }
chrono = "0.4.42"
bytes = "1.10.1"

[dependencies.sqlx]
version = "0.8.6"
features = ["runtime-tokio-rustls", "postgres"]

[dev-dependencies]
reqwest = { version = "0.12.24", features = ["json"] }
